# jmrecipes

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: groceries - Copy.xlsx  groceries.xlsx  units.csv
data/collections/: collection2.yaml  home.yaml  test.json
data/recipes/french-toast/: french-toast.yaml
data/recipes/ingredient-lists/: french-toast.yaml
data/recipes/linked-child-1/: recipe.yaml
data/recipes/linked-child-2/: recipe.yaml
data/recipes/linked-child-3/: recipe.yaml
data/recipes/linked-parent/: recipe.yaml
data/recipes/scale-pluralize/: french-toast.yaml
data/recipes/search-ingredient/: recipe.yaml
data/recipes/search-ingredient-tag/: recipe.yaml
data/recipes/search-subtitle/: recipe.yaml
data/recipes/search-title/: recipe.yaml
data/recipes/test-1-scale/: recipe.yaml
data/recipes/test-1-serving/: recipe.yaml
data/recipes/test-chili/: recipe.json
demo/: index.html
jmrecipes/: build_site.ipynb  build_site.py  buildsite.ipynb  buildsite.py  importer.py  parser.py  utils.py
jmrecipes/data/: config.ini  groceries.xlsx  units.csv
jmrecipes/src/: build.py  builder.py  parser.py  utils.py
jmrecipes/src/utils/: parse.py  (+6 more)
jmrecipes/templates/: 404.html  collection.html  print-page.html  recipe-page.html  summary-page.html
jmrecipes/tests/: test_builder.py  test_recipe_builder.py  test_site_builder.py  test_units.py  test_utils.py
src/: build_site.py
src/jmrecipes/: build.py  cli.py  paths.py
tests/: test.py  test_builder.py  test_recipe_builder.py  test_site_builder.py  test_units.py  test_utils.py
(+156 files in other folders)
